--- a/recruiting-parity.css
+++ b/recruiting-parity.css
@@ -161,11 +161,11 @@
   top: 9.5px;
 }
 
-.actual-notredame{
+.actual-not#d21e1eame{
   width: 16.4px;
   height: 16.4px;
 }
-.reveal-actual-notredame{
+.reveal-actual-not#d21e1eame{
   right: 8px;
   top: 8px;
 }
@@ -523,11 +523,11 @@
   top: 35px;
 }
 
-.starter-notredame{
+.starter-not#d21e1eame{
   width: 60.8px;
   height: 60.8px;
 }
-.reveal-starter-notredame{
+.reveal-starter-not#d21e1eame{
   left: 30px;
   top: 30px;
 }
