--- a/ncaa-finances.css
+++ b/ncaa-finances.css
@@ -1,12 +1,15 @@
 .profit-equation{
   display: flex;
-  align-items: flex-start;
 }
 
+.equation{
+  text-align: center;
+}
 
 .equation-parts{
   text-align: center;
   width: 200px;
+  margin-top: 30px;
 }
 .equation1{
   position: relative;
@@ -19,15 +22,20 @@
   color: #000000;
   z-index: 1;
   padding: 10px;
-  top: 30px;
+  top: 70px;
   left: -60px;
   width: 300px;
 }
 .visible{
   visibility: visible;
 }
-h5{
-  margin-bottom: 20px;
+.equation-parts h5{
+  margin-bottom: 40px;
+  color: #d21e1e;
+}
+
+h2{
+  color: #d21e1e;
 }
 
 .equation-parts h1{
