--- a/recruiting-parity.css
+++ b/recruiting-parity.css
@@ -23,7 +23,8 @@
 }
 .actual {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin-left: 20px;
 }
 
 .actual-alabama {
@@ -161,11 +162,11 @@
   top: 9.5px;
 }
 
-.actual-not#d21e1eame{
+.actual-notredame{
   width: 16.4px;
   height: 16.4px;
 }
-.reveal-actual-not#d21e1eame{
+.reveal-actual-notredame{
   right: 8px;
   top: 8px;
 }
@@ -431,7 +432,6 @@
   top: .5px;
 }
 
-
 .actual-northwestern{
   width: 1.04px;
   height: 1.04px;
@@ -483,8 +483,8 @@
 
 .starter {
   display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 20px;
 }
 
 .starter-clemson{
@@ -523,11 +523,11 @@
   top: 35px;
 }
 
-.starter-not#d21e1eame{
+.starter-notredame{
   width: 60.8px;
   height: 60.8px;
 }
-.reveal-starter-not#d21e1eame{
+.reveal-starter-notredame{
   left: 30px;
   top: 30px;
 }
@@ -753,6 +753,648 @@
   height: 1px;
 }
 .reveal-starter-iowastate{
+  right: .5px;
+  top: .5px;
+}
+
+
+
+
+.scholarship {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 15px;
+}
+
+.scholarship-clemson{
+  width: 95.7px;
+  height: 95.7px;
+}
+.reveal-scholarship-clemson{
+  left: 47.5px;
+  top: 47.5px;
+}
+
+.scholarship-clemson{
+  width: 95.7px;
+  height: 95.7px;
+}
+.reveal-scholarship-clemson{
+  left: 47.5px;
+  top: 47.5px;
+}
+
+.scholarship-florida{
+  width: 83.5px;
+  height: 83.5px;
+}
+.reveal-scholarship-florida{
+  left: 41.5px;
+  top: 41.5px;
+}
+
+.scholarship-texas{
+  width: 69px;
+  height: 69px;
+}
+.reveal-scholarship-texas{
+  left: 34.5px;
+  top: 34.5px;
+}
+
+.scholarship-georgia{
+  width: 66px;
+  height: 66px;
+}
+.reveal-scholarship-georgia{
+  left: 33px;
+  top: 33px;
+}
+
+.scholarship-syracuse{
+  width: 52.9px;
+  height: 52.9px;
+}
+.reveal-scholarship-syracuse{
+  left: 26.5px;
+  top: 26.5px;
+}
+
+.scholarship-oklahoma{
+  width: 48.8px;
+  height: 48.8px;
+}
+.reveal-scholarship-oklahoma{
+  left: 24px;
+  top: 24px;
+}
+
+.scholarship-lsu{
+  width: 36px;
+  height: 36px;
+}
+.reveal-scholarship-lsu{
+  right: 18px;
+  top: 18px;
+}
+
+.scholarship-pennstate{
+  width: 34.6px;
+  height: 34.6px;
+}
+.reveal-scholarship-pennstate{
+  right: 17px;
+  top: 17px;
+}
+
+.scholarship-texasam{
+  width: 34px;
+  height: 34px;
+}
+.reveal-scholarship-texasam{
+  right: 17px;
+  top: 17px;
+}
+
+.scholarship-alabama{
+  width: 31.5px;
+  height: 31.5px;
+}
+.reveal-scholarship-alabama{
+  right: 16px;
+  top: 16px;
+}
+
+.scholarship-northwestern{
+  width: 23.8px;
+  height: 23.8px;
+}
+.reveal-scholarship-northwestern{
+  right: 12px;
+  top: 12px;
+}
+
+.scholarship-washington{
+  width: 20.6px;
+  height: 20.6px;
+}
+.reveal-scholarship-washington{
+  right: 10px;
+  top: 10px;
+}
+
+.scholarship-ucf{
+  width: 19.3px;
+  height: 19.3px;
+}
+.reveal-scholarship-ucf{
+  right: 10px;
+  top: 10px;
+}
+
+.scholarship-boisestate{
+  width: 14.3px;
+  height: 14.3px;
+}
+.reveal-scholarship-boisestate{
+  right: 7px;
+  top: 7px;
+}
+
+.scholarship-utahstate{
+  width: 8px;
+  height: 8px;
+}
+.reveal-scholarship-utahstate{
+  right: 4px;
+  top: 4px;
+}
+
+.scholarship-ohiostate{
+  width: 7.7px;
+  height: 7.7px;
+}
+.reveal-scholarship-ohiostate{
+  right: 3.5px;
+  top: 3.5px;
+}
+
+.scholarship-cincinatti{
+  width: 3.6px;
+  height: 3.6px;
+}
+.reveal-scholarship-cincinatti{
+  right: 2px;
+  top: 2px;
+}
+
+.scholarship-iowa{
+  width: 1px;
+  height: 1px;
+}
+.reveal-scholarship-iowa{
+  right: .5px;
+  top: .5px;
+}
+
+.money{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
+}
+
+.money-oklahoma{
+  width: 51.5px;
+  height: 51.5px;
+}
+.reveal-money-oklahoma{
+  left: 25.5px;
+  top: 25.5px;
+}
+
+.money-clemson{
+  width: 50.6px;
+  height: 50.6px;
+}
+.reveal-money-clemson{
+  left: 25px;
+  top: 25px;
+}
+
+.money-notredame{
+  width: 50.5px;
+  height: 50.5px;
+}
+.reveal-money-notredame{
+  left: 25px;
+  top: 25px;
+}
+
+.money-lsu{
+  width: 49.5px;
+  height: 49.5px;
+}
+.reveal-money-lsu{
+  left: 25px;
+  top: 25px;
+}
+
+.money-alabama{
+  width: 48.7px;
+  height: 48.7px;
+}
+.reveal-money-alabama{
+  left: 24px;
+  top: 24px;
+}
+
+.money-ohiostate{
+  width: 48.6px;
+  height: 48.6px;
+}
+.reveal-money-ohiostate{
+  left: 24px;
+  top: 24px;
+}
+
+.money-florida{
+  width: 48.2px;
+  height: 48.2px;
+}
+.reveal-money-florida{
+  left: 24px;
+  top: 24px;
+}
+
+.money-georgia{
+  width: 45.1px;
+  height: 45.1px;
+}
+.reveal-money-georgia{
+  left: 22.5px;
+  top: 22.5px;
+}
+
+.money-texas{
+  width: 44.3px;
+  height: 44.3px;
+}
+.reveal-money-texas{
+  left: 22px;
+  top: 22px;
+}
+
+.money-washingtonstate{
+  width: 43.2px;
+  height: 43.2px;
+}
+.reveal-money-washingtonstate{
+  right: 21.5px;
+  top: 21.5px;
+}
+
+.money-ucf{
+  width: 40.5px;
+  height: 40.5px;
+}
+.reveal-money-ucf{
+  right: 20px;
+  top: 20px;
+}
+
+.money-kentucky{
+  width: 37.8px;
+  height: 37.8px;
+}
+.reveal-money-kentucky{
+  right: 18.5px;
+  top: 18.5px;
+}
+
+.money-washington{
+  width: 17px;
+  height: 17px;
+}
+.reveal-money-washington{
+  right: 8.5px;
+  top: 8.5px;
+}
+
+.money-michigan{
+  width: 11.8px;
+  height: 11.8px;
+}
+.reveal-money-michigan{
+  right: 5.5px;
+  top: 5.5px;
+}
+
+.money-syracuse{
+  width: 6.6px;
+  height: 6.6px;
+}
+.reveal-money-syracuse{
+  right: 3px;
+  top: 3px;
+}
+
+.money-texasam{
+  width: 4.1px;
+  height: 4.1px;
+}
+.reveal-money-texasam{
+  right: 2px;
+  top: 2px;
+}
+
+.money-pennstate{
+  width: 4.1px;
+  height: 4.1px;
+}
+.reveal-money-pennstate{
+  right: 2px;
+  top: 2px;
+}
+
+.money-northwestern{
+  width: 4.1px;
+  height: 4.1px;
+}
+.reveal-money-northwestern{
+  right: 2px;
+  top: 2px;
+}
+
+.money-boisestate{
+  width: 4.1px;
+  height: 4.1px;
+}
+.reveal-money-boisestate{
+  right: 2px;
+  top: 2px;
+}
+
+.money-iowa{
+  width: 4px;
+  height: 4px;
+}
+.reveal-money-iowa{
+  right: 2px;
+  top: 2px;
+}
+
+.money-stanford{
+  width: 4px;
+  height: 4px;
+}
+.reveal-money-stanford{
+  right: 2px;
+  top: 2px;
+}
+
+.money-mississippistate{
+  width: 4px;
+  height: 4px;
+}
+.reveal-money-mississippistate{
+  right: 2px;
+  top: 2px;
+}
+
+.money-utah{
+  width: 4px;
+  height: 4px;
+}
+.reveal-money-utah{
+  right: 2px;
+  top: 2px;
+}
+
+.money-tennessee{
+  width: 4px;
+  height: 4px;
+}
+.reveal-money-tennessee{
+  right: 2px;
+  top: 2px;
+}
+
+.money-auburn{
+  width: 4px;
+  height: 4px;
+}
+.reveal-money-auburn{
+  right: 2px;
+  top: 2px;
+}
+
+.money-wisconsin{
+  width: 4px;
+  height: 4px;
+}
+.reveal-money-wisconsin{
+  right: 2px;
+  top: 2px;
+}
+
+.money-michiganstate{
+  width: 3.9px;
+  height: 3.9px;
+}
+.reveal-money-michiganstate{
+  right: 2px;
+  top: 2px;
+}
+
+.money-floridastate{
+  width: 3.9px;
+  height: 3.9px;
+}
+.reveal-money-floridastate{
+  right: 2px;
+  top: 2px;
+}
+
+.money-oregon{
+  width: 3.9px;
+  height: 3.9px;
+}
+.reveal-money-oregon{
+  right: 2px;
+  top: 2px;
+}
+
+
+.revenue{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 20px;
+}
+.revenue-ohiostate{
+  width: 71.3px;
+  height: 71.3px;
+}
+.reveal-revenue-ohiostate{
+  left: 35.5px;
+  top: 35.5px;
+}
+
+.revenue-floridastate{
+  width: 64.9px;
+  height: 64.9px;
+}
+.reveal-revenue-floridastate{
+  left: 32px;
+  top: 32px;
+}
+
+.revenue-lsu{
+  width: 59.2px;
+  height: 59.2px;
+}
+.reveal-revenue-lsu{
+  left: 29.5px;
+  top: 29.5px;
+}
+
+.revenue-florida{
+  width: 53.4px;
+  height: 53.4px;
+}
+.reveal-revenue-florida{
+  left: 26.5px;
+  top: 26.5px;
+}
+
+.revenue-pennstate{
+  width: 47.3px;
+  height: 47.3px;
+}
+.reveal-revenue-pennstate{
+  left: 23.5px;
+  top: 23.5px;
+}
+
+.revenue-auburn{
+  width: 43.2px;
+  height: 43.2px;
+}
+.reveal-revenue-auburn{
+  left: 21.5px;
+  top: 21.5px;
+}
+
+.revenue-washington{
+  width: 41px;
+  height: 41px;
+}
+.reveal-revenue-washington{
+  left: 20.5px;
+  top: 20.5px;
+}
+
+.revenue-wisconsin{
+  width: 35.1px;
+  height: 35.1px;
+}
+.reveal-revenue-wisconsin{
+  left: 17.5px;
+  top: 17.5px;
+}
+
+.revenue-georgia{
+  width: 30.6px;
+  height: 30.6px;
+}
+.reveal-revenue-georgia{
+  left: 15px;
+  top: 15px;
+}
+
+.revenue-arkansas{
+  width: 29.1px;
+  height: 29.1px;
+}
+.reveal-revenue-arkansas{
+  left: 14.5px;
+  top: 14.5px;
+}
+
+.revenue-oklahoma{
+  width: 26.5px;
+  height: 26.5px;
+}
+.reveal-revenue-oklahoma{
+  right: 13px;
+  top: 13px;
+}
+
+.revenue-notredame{
+  width: 25.7px;
+  height: 25.7px;
+}
+.reveal-revenue-notredame{
+  right: 12.5px;
+  top: 12.5px;
+}
+
+.revenue-texasam{
+  width: 23px;
+  height: 23px;
+}
+.reveal-revenue-texasam{
+  right: 11.5px;
+  top: 11.5px;
+}
+
+.revenue-michigan{
+  width: 20.4px;
+  height: 20.4px;
+}
+.reveal-revenue-michigan{
+  right: 10px;
+  top: 10px;
+}
+
+.revenue-nebraska{
+  width: 16.8px;
+  height: 16.8px;
+}
+.reveal-revenue-nebraska{
+  right: 8px;
+  top: 8px;
+}
+
+.revenue-texas{
+  width: 16.4px;
+  height: 16.4px;
+}
+.reveal-revenue-texas{
+  right: 8px;
+  top: 8px;
+}
+
+.revenue-alabama{
+  width: 16.3px;
+  height: 16.3px;
+}
+.reveal-revenue-alabama{
+  right: 8px;
+  top: 8px;
+}
+
+.revenue-tennessee{
+  width: 13.6px;
+  height: 13.6px;
+}
+.reveal-revenue-tennessee{
+  right: 6.5px;
+  top: 6.5px;
+}
+
+.revenue-oregon{
+  width: 10.8px;
+  height: 10.8px;
+}
+.reveal-revenue-oregon{
+  right: 5px;
+  top: 5px;
+}
+
+.revenue-michiganstate{
+  width: 5px;
+  height: 5px;
+}
+.reveal-revenue-michiganstate{
+  right: 2.5px;
+  top: 2.5px;
+}
+
+.revenue-olemiss{
+  width: 1px;
+  height: 1px;
+}
+.reveal-revenue-olemiss{
   right: .5px;
   top: .5px;
 }
