--- a/court-cases.css
+++ b/court-cases.css
@@ -42,6 +42,15 @@ h3{
   left: -70px;
   overflow: scroll;
 }
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgba(0,0,0,.5);
+  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
 
 .visible {
   visibility: visible;
