--- a/rulebook.css
+++ b/rulebook.css
@@ -1,3 +1,6 @@
+body{
+  margin-bottom: 300px;
+}
 ul {
   list-style-type: none;
 }
@@ -50,119 +53,314 @@ h5{
 }
 
 .intro{
-  width: 483px;
+  width: 966px;
 }
 .article1-1{
-  width: 8px;
+  width: 16px;
 }
 .article1-2{
-  width: 99.5px;
+  width: 199px;
 }
 .article1-3-1{
-  width: 33.5px;
+  width: 67px;
 }
 .article1-3-2{
-  width: 33px;
+  width: 66px;
 }
 .article2-01{
-  width: 26.5px;
+  width: 53px;
 }
 .article2-1-1{
-  width: 29.5px;
+  width: 59px;
 }
 .article2-1-2{
-  width: 23px;
+  width: 46px;
 }
 .article2-2{
-  width: 16px;
+  width: 59px;
 }
 .article2-2-1{
-  width: 19px;
+  width: 38px;
 }
 .article2-2-2{
-  width: 19.5px;
+  width: 39px;
 }
 .article2-2-3{
-  width: 16px;
+  width: 32px;
 }
 .article2-2-4{
-  width: 16.5px;
+  width: 33px;
 }
 .article2-2-5{
-  width: 16.5px;
+  width: 33px;
 }
 .article2-2-6{
-  width: 12.5px;
-}
-.article2-3-1{
-  width: 19.5px;
-}
-.article2-3-2{
-  width: 18.5px;
-}
-.article2-3-3{
-  width:11.5px;
-}
-.article2-4{
-  width:63.5px;
-}
-.article2-5{
-  width:30px;
-}
-.article2-6{
-  width:44.5px;
-}
-.article2.7{
   width: 25px;
 }
+.article2-3-1{
+  width: 29px;
+}
+.article2-3-2{
+  width: 37px;
+}
+.article2-3-3{
+  width: 32px;
+}
+.article2-4{
+  width: 127px;
+}
+.article2-5{
+  width:60px;
+}
+.article2-6{
+  width:87px;
+}
+.article2.7{
+  width: 50px;
+}
 .article2-8-1{
-  width:51px;
+  width:102px;
 }
 .article2-8-2{
-  width:22.5px;
+  width:45px;
 }
 .article2-8-3{
-  width: 15px;
+  width: 30px;
 }
 .article2-9{
-  width: 27px;
+  width: 54px;
 }
 .article2-10{
-  width: 24.5px;
+  width: 49px;
 }
 .article2-11{
-  width: 34px;
+  width: 68px;
 }
 .article2-12{
-  width: 15px;
+  width: 30px;
 }
 .article2-13{
-  width: 43px;
+  width: 86px;
 }
 .article2-14{
-  width: 22px;
+  width: 44px;
 }
 .article2-15{
-  width: 30.5px;
+  width: 61px;
 }
 .article2-16{
-  width: 24.5px;
+  width: 49px;
 }
 .article3-01-1{
-  width: 22px;
+  width: 44px;
 }
 .article3-01-2{
-  width: 17px;
+  width: 34px;
 }
 .article3-01-3{
-  width: 21.5px;
+  width: 43px;
 }
 .article3-01-4{
-  width: 11px;
+  width: 22px;
 }
 .article3-02-1{
-  width: 13px;
+  width: 26px;
 }
 .article3-02-2{
-  width: 13px;
+  width: 26px;
+}
+.article3-02-3-1{
+  width: 94px;
+}
+.article3-02-3-1-1{
+  width: 74px;
+}
+.article3-02-3-2{
+  width:122px;
+}
+.article3-02-3-3{
+  width:111px;
+}
+.article3-1-1{
+  width:62px;
+}
+.article3-1-2{
+  width:76px;
+}
+.article3-1-2-1{
+  width:46px;
+}
+.article3-1-2-2{
+  width: 23px;
+}
+.article3-1-2-3{
+  width:46px;
+}
+.article3-1-2-4{
+  width:35px;
+}
+.article3-1-2-5{
+  width: 145px;
+}
+.article3-1-2-6{
+  width:39px;
+}
+.article3-1-2-7{
+  width:23px;
+}
+.article3-1-2-8{
+  width: 28px;
+}
+.article3-1-2-9{
+  width: 35px;
+}
+.article3-1-2-10{
+  width:14px;
+}
+.article3-1-2-11{
+  width:59px;
+}
+.article3-2-1-1{
+  width: 49px;
+}
+.article3-2-1-2{
+  width:19px;
+}
+.article3-2-1-3{
+  width: 20px;
+}
+.article3-2-2-1{
+  width:40px;
+}
+.article3-2-2-1-1{
+  width: 103px;
+}
+.article3-2-2-2{
+  width: 30px;
+}
+.article3-2-3-1{
+  width: 86px;
+}
+.article3-2-3-2{
+  width: 57px;
+}
+.article3-2-3-3{
+  width: 59px;
+}
+.article3-2-3-4{
+  width: 54px;
+}
+.article3-2-4-1{
+  width: 24px;
+}
+.article3-2-4-2{
+  width:41px;
+}
+.article3-2-4-3{
+  width: 95px;
+}
+.article3-2-4-4{
+  width: 57px;
+}
+.article3-2-4-5{
+  width: 169px;
+}
+.article3-2-4-5-1{
+  width: 52px;
+}
+.article3-2-4-6{
+  width: 44px;
+}
+.article3-2-4-7{
+  width: 265px;
+}
+.article3-2-4-8{
+  width: 93px;
+}
+.article3-2-4-8-1{
+  width: 49px;
+}
+.article3-2-4-8-2{
+  width: 29px;
+}
+.article3-2-4-8-3{
+  width: 126px;
+}
+.article3-2-4-9{
+  width: 45px;
+}
+.article3-2-4-10{
+  width: 40px;
+}
+.article3-2-4-11{
+  width: 16px;
+}
+.article3-2-4-12{
+  width: 14px;
+}
+.article3-2-4-13{
+  width: 38px;
+}
+.article3-2-4-14{
+  width: 48px;
+}
+.article3-2-4-15{
+  width: 201px;
+}
+.article3-2-4-15-1{
+  width: 113px;
+}
+.article3-2-4-16{
+  width: 79px;
+}
+.article3-2-4-17{
+  width: 67px;
+}
+.article3-2-4-18{
+  width: 192px;
+}
+.article3-2-4-18-1{
+  width: 163px;
+}
+.article3-2-4-18-1-1{
+  width: 32px;
+}
+.article3-2-4-19{
+  width: 70px;
+}
+.article3-2-4-20{
+  width: 42px;
+}
+.article3-2-4-21-1{
+  width: 57px;
+}
+.article3-2-4-21-2{
+  width: 54px;
+}
+.article3-2-5-1{
+  width:147px;
+}
+.article3-2-5-1-1{
+  width:17px;
+}
+.article3-2-5-2{
+  width: 25px;
+}
+.article3-2-5-3{
+  width: 19px;
+}
+.article3-2-5-4{
+  width: 64px;
+}
+.article3-2-5-5{
+  width: 29px;
+}
+.article3-2-5-6{
+  width: 64px;
+}
+.article3-2-6{
+  width: 32px;
+}
+.article3-2-6-1{
+  width: 85px;
 }
