--- a/rulebook.css
+++ b/rulebook.css
@@ -364,3 +364,126 @@ h5{
 .article3-2-6-1{
   width: 85px;
 }
+.article3-3-1-1{
+  width: 29px;
+}
+.article3-3-1-2{
+  width:45px;
+}
+.article3-3-1-3{
+  width: 40px;
+}
+.article3-3-2-1{
+  width: 38px;
+}
+.article3-3-2-2{
+  width: 29px;
+}
+.article3-3-2-2-1{
+  width: 29px;
+}
+.article3-3-2-3{
+  width: 30px;
+}
+.article3-3-3-1{
+  width: 71px;
+}
+.article3-3-3-2{
+  width: 58px;
+}
+.article3-3-4-1{
+  width: 24px;
+}
+.article3-3-4-2{
+  width: 24px;
+}
+.article3-3-4-3{
+  width: 27px;
+}
+.article3-3-4-4{
+  width: 17px;
+}
+.article3-3-4-5{
+  width: 30px;
+}
+.article3-3-4-6-1{
+  width: 58px;
+}
+.article3-3-4-6-2{
+  width: 54px;
+}
+.article3-3-4-7{
+  width: 72px;
+}
+.article3-3-5-1{
+  width: 146px;
+}
+.article3-3-5-1-1{
+  width: 17px;
+}
+.article3-3-5-2{
+  width: 19px;
+}
+.article3-3-5-3{
+  width: 29px;
+}
+.article3-3-5-4{
+  width: 64px;
+}
+.article3-3-6{
+  width: 32px;
+}
+.article3-3-6-1{
+  width: 35px;
+}
+.article3-4-1{
+  width: 76px;
+}
+.article3-4-2-1{
+  width: 53px;
+}
+.article3-4-2-2{
+  width: 41px;
+}
+.article3-4-3-1{
+  width: 48px;
+}
+.article3-4-3-2{
+  width: 36px;
+}
+.article3-4-4-1{
+  width: 19px;
+}
+.article3-4-4-2{
+  width: 50px;
+}
+.article3-4-5-1{
+  width: 156px;
+}
+.article3-4-5-1-1{
+  width: 18px;
+}
+.article3-4-5-2{
+  width: 19px;
+}
+.article3-4-5-3{
+  width: 25px;
+}
+.article3-4-5-4{
+  width: 68px;
+}
+.article3-4-6{
+  width: 32px;
+}
+.article3-4-6-1{
+  width: 61px;
+}
+.article3-7-1{
+  width: 30px;
+}
+.article3-7-2{
+  width: 19px;
+}
+.article3-7-3{
+  width: 67px;
+}
